On branch master  Changes to be committed: 	new file:   .gitignore 	modified:   .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
-sudo: false
-script: mvn clean verify
+jdk: oraclejdk8
+ 
+script:
+- ./mvnw clean install -B
+
+cache:
+
+  directories:
+
+  - $HOME/.m2
