On branch master  Changes to be committed: 	modified:   .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: java
+sudo: true
+dist: trusty
 jdk: oraclejdk8
- 
-script:
-- ./mvnw clean install -B
-
-cache:
-
-  directories:
-
-  - $HOME/.m2
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
+before_install:
+  - chmod +x mvnw
