On branch master  Changes to be committed: 	modified:   .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
   - chmod +x mvnw
   
 script : 
-  cd C:\Tools\MicroServices\MS-WS\DemoProject\target
-  java -jar DemoProject-0.0.1-SNAPSHOT.jar com.example.demo.DemoProjectApplication
+  - cd C:\Tools\MicroServices\MS-WS\DemoProject\target
+  - java -jar DemoProject-0.0.1-SNAPSHOT.jar com.example.demo.DemoProjectApplication
