--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
 cache:
   directories:
     - node_modules
+script:
+	- cd /home/travis/build/AnushaKallem/DemoProject/target
+	- java -jar DemoProject-0.0.1-SNAPSHOT.jar com.example.demo.DemoProjectApplication
